added top border to figure card

--- a/src/components/styles/css/tome-card.css
+++ b/src/components/styles/css/tome-card.css
@@ -68,8 +68,9 @@
   }
 }
 .tome-card .caption h3 {
+  border-top: 3px solid white;
   border-bottom: 3px solid white;
-  padding-bottom: 10px;
+  padding: 2.5% 0;
   border-radius: 3px;
   white-space: nowrap;
 }
