--- a/src/components/styles/tome-card.scss
+++ b/src/components/styles/tome-card.scss
@@ -61,8 +61,9 @@
       margin-top: 12px;
     }
     h3 {
+      border-top: 3px solid white;
       border-bottom: 3px solid white;
-      padding-bottom: 10px;
+      padding: 2.5% 0;
       border-radius: 3px;
       white-space: nowrap;
     }
