--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -78,7 +78,12 @@ header {
 }
 
 h1 {
-  font-size: calc(2.2rem + 1 * (2.2rem * 0.3));
+  font-size: 2.2rem;
+}
+@media only screen and (min-width: 569px) {
+  h1 {
+    font-size: calc(2.2rem + 1 * (2.2rem * 0.3));
+  }
 }
 @media only screen and (min-width: 1025px) {
   h1 {
@@ -92,7 +97,12 @@ h1 {
 }
 
 h2 {
-  font-size: calc(1.6rem + 1 * (1.6rem * 0.3));
+  font-size: 1.6rem;
+}
+@media only screen and (min-width: 569px) {
+  h2 {
+    font-size: calc(1.6rem + 1 * (1.6rem * 0.3));
+  }
 }
 @media only screen and (min-width: 1025px) {
   h2 {
@@ -106,7 +116,12 @@ h2 {
 }
 
 h3 {
-  font-size: calc(1.2rem + 1 * (1.2rem * 0.3));
+  font-size: 1.2rem;
+}
+@media only screen and (min-width: 569px) {
+  h3 {
+    font-size: calc(1.2rem + 1 * (1.2rem * 0.3));
+  }
 }
 @media only screen and (min-width: 1025px) {
   h3 {
@@ -121,7 +136,12 @@ h3 {
 
 h1.logo {
   font-family: logo;
-  font-size: calc(3.5rem + 1 * (3.5rem * 0.3));
+  font-size: 3.5rem;
+}
+@media only screen and (min-width: 569px) {
+  h1.logo {
+    font-size: calc(3.5rem + 1 * (3.5rem * 0.3));
+  }
 }
 @media only screen and (min-width: 1025px) {
   h1.logo {
@@ -141,7 +161,12 @@ h1, h2, h3 {
 
 p, span {
   font-family: body;
-  font-size: calc(1rem + 1 * (1rem * 0.3));
+  font-size: 1rem;
+}
+@media only screen and (min-width: 569px) {
+  p, span {
+    font-size: calc(1rem + 1 * (1rem * 0.3));
+  }
 }
 @media only screen and (min-width: 1025px) {
   p, span {
