--- a/src/components/styles/fragment-card.scss
+++ b/src/components/styles/fragment-card.scss
@@ -1,6 +1,6 @@
 @use '../../assets/font-styles';
 
-.tome-card {
+.fragment-card {
   top: 0;
   position: relative;
   border-radius: 10px;
@@ -86,3 +86,4 @@
     left: 0;
   }
 }
+ 
