--- a/src/components/styles/css/fragment-card.css
+++ b/src/components/styles/css/fragment-card.css
@@ -9,6 +9,10 @@
   height: 0;
   box-shadow: 0 0 8px 1px rgb(48, 48, 48);
   transition: transform 0.55s;
+  text-decoration: none;
+}
+.fragment-card:visited {
+  color: white;
 }
 .fragment-card > * {
   position: absolute;
@@ -17,21 +21,16 @@
   transform: translate(0.5%, 0.5%);
 }
 .fragment-card:hover img {
-  filter: invert(0.075);
+  filter: invert(0.05);
+}
+.fragment-card:hover img.glow {
+  filter: invert(1) blur(8px);
 }
 .fragment-card .card {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  text-decoration: none;
-}
-.fragment-card .card:visited {
-  color: white;
 }
 .fragment-card .caption {
   width: 100%;
@@ -89,7 +88,7 @@
 }
 .fragment-card img.glow {
   position: absolute;
-  filter: invert(1);
+  filter: invert(1) blur(4px);
   top: 0;
   left: 0;
 }
