--- a/src/components/styles/fragment-card.scss
+++ b/src/components/styles/fragment-card.scss
@@ -11,6 +11,11 @@
   height: 0;
   box-shadow: 0 0 8px 1px rgb(48, 48, 48);
   transition: transform 0.55s;
+  text-decoration: none;
+
+  &:visited {
+    color: white;
+  }
 
   > * {
     position: absolute;
@@ -19,24 +24,19 @@
   &:hover {
     transform: translate(0.5%, 0.5%);
     img {
-      filter: invert(0.075);
+      filter: invert(0.05);
+    }
+
+    img.glow{
+      filter: invert(1) blur(8px);
     }
   }
 
   .card {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    text-decoration: none;
-
-    &:visited {
-      color: white;
-    }
   }
 
   .caption {
@@ -81,7 +81,7 @@
 
   img.glow {
     position: absolute;
-    filter: invert(1);
+    filter: invert(1) blur(4px);
     top: 0;
     left: 0;
   }
