--- a/src/components/styles/fragment-card.scss
+++ b/src/components/styles/fragment-card.scss
@@ -17,14 +17,10 @@
     color: white;
   }
 
-  > * {
-    position: absolute;
-  }
-
   &:hover {
     transform: translate(0.5%, 0.5%);
     img {
-      filter: invert(0.05);
+      filter: invert(0.075);
     }
 
     img.glow{
@@ -32,17 +28,12 @@
     }
   }
 
-  .card {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
   .caption {
-    width: 100%;
-    padding: 0 10%;
-    bottom: 0;
+    position: absolute;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
     user-select: none;
 
     p,
@@ -52,7 +43,7 @@
       width: 100%;
     }
     p {
-      @include font-styles.font-attributes(0.75rem);
+      @include font-styles.font-attributes(0.9rem);
       margin-top: 12px;
     }
     h3 {
@@ -66,13 +57,12 @@
 
   .portrait {
     width: 100%;
-    height: 0;
-    padding-top: 115%;
 
     img {
       position: absolute;
-      padding: 10% 10% 0 10%;
+      padding: 5%;
       width: 100%;
+      height: 100%;
       top: 0.12%;
       left: 0.18%;
       transition: filter 0.55s, transform 0.55s;
