Changed term 'figure' to 'character'

--- a/src/assets/_reset.scss
+++ b/src/assets/_reset.scss
@@ -27,7 +27,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, character, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
