--- a/src/components/styles/css/fragment-card.css
+++ b/src/components/styles/css/fragment-card.css
@@ -42,6 +42,8 @@
 }
 .fragment-card .caption p {
   font-size: 0.9rem;
+  color: white;
+  text-shadow: 1px 1px 10px black, -1px -1px 10px black;
   margin-top: 12px;
 }
 @media only screen and (min-width: 569px) {
