Added Header story

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,7 +1,7 @@
-@use "sass:list";
-@use "_vars";
-@use "_reset";
-@use "_font-styles";
+@use 'sass:list';
+@use '_vars';
+@use '_reset';
+@use '_font-styles';
 
 // Font sizes
 $logo-size: 3.5rem;
