--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -11,10 +11,10 @@ $desktop-small: 1024px !default;
 $desktop: 1440px !default;
 $desktop-large: 1920px !default;
 
-$mobile-and-up: "only screen and (min-width: #{$mobile-small-up})" !default;
-$desktop-small-and-up: "only screen and (min-width: #{$desktop-small-up})" !default;
-$desktop-and-up: "only screen and (min-width: #{$desktop-up})" !default;
-$desktop-large-and-up: "only screen and (min-width: #{$desktop-large-up})" !default;
+$mobile-and-up: 'only screen and (min-width: #{$mobile-small-up})' !default;
+$desktop-small-and-up: 'only screen and (min-width: #{$desktop-small-up})' !default;
+$desktop-and-up: 'only screen and (min-width: #{$desktop-up})' !default;
+$desktop-large-and-up: 'only screen and (min-width: #{$desktop-large-up})' !default;
 
 $settings-height: 12vh;
 $background-select-height: 23vh;
