added sass/css/style loader dep

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -10,17 +10,17 @@ $header-sizes: 2.2rem, 1.6rem, 1.2rem;
 
 @font-face {
   font-family: title;
-  src: url(../fonts/Philosopher-Bold.ttf);
+  src: url(./fonts/Philosopher-Bold.ttf);
 }
 
 @font-face {
   font-family: heading;
-  src: url(../fonts/Montserrat-SemiBold.ttf);
+  src: url(./fonts/Montserrat-SemiBold.ttf);
 }
 
 @font-face {
   font-family: body;
-  src: url(../fonts/Montserrat-Regular.ttf);
+  src: url(./fonts/Montserrat-Regular.ttf);
 }
 
 html {
