--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -4,7 +4,7 @@
 .header {
   @include font-styles.contrast-font(white);
   position: relative;
-  padding: 12.5%;
+  padding: 12.5% 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
