adjusted fragment styling

--- a/src/components/styles/spaced-text.scss
+++ b/src/components/styles/spaced-text.scss
@@ -1,3 +1,5 @@
+@use '../../assets/font-styles';
+
 .spaced-text{
     display: flex;
     justify-content: space-around;
@@ -5,5 +7,9 @@
     span {
         font-family: inherit;
         font-size: inherit;
+    }
+
+    &.contrast span{
+        @include font-styles.contrast-font(white);
     }
 }
