--- a/src/components/styles/default-layout.scss
+++ b/src/components/styles/default-layout.scss
@@ -7,7 +7,7 @@
     }
 }
 
-@media #{$desktop-small-and-up} {
+@media #{$tablet-and-up} {
     .default-layout {
         main {
             margin: 12.5%;
