--- a/src/components/styles/fragment-cards.scss
+++ b/src/components/styles/fragment-cards.scss
@@ -1,28 +1,32 @@
 @use '../../assets/vars';
 .fragment-cards{
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     gap: 16px;
 
     > .fragment-card {
-        grid-column: span 6;
+        grid-column: span 12;
     }
 }
 
 @media #{vars.$mobile-and-up} {
     .fragment-cards > .fragment-card {
-        grid-column: span 3;
+        grid-column: span 6;
+    }
+}
+
+@media #{vars.$desktop-small-and-up} {
+    .fragment-cards {
+        gap: 80px;
+
+        > .fragment-card {
+            grid-column: span 4;
+        }
     }
 }
 
 @media #{vars.$desktop-and-up} {
-    .fragment-cards {
-        gap: 80px;
-    }
-}
-
-@media #{vars.$desktop-large-and-up} {
     .fragment-cards > .fragment-card{
-        grid-column: span 2;
+        grid-column: span 3;
     }
 }
