--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -4,12 +4,12 @@
 .header {
   @include font-styles.contrast-font(white);
   position: relative;
-  margin: 12.5% 0;
+  margin: 5rem 0 7rem 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  gap: 5.5vh;
+  gap: 3vh;
   user-select: none;
 
   h1 {
@@ -18,12 +18,6 @@
 
   img {
     padding-bottom: 30px;
-  }
-}
-
-@media #{vars.$mobile-and-up} {
-  .header {
-    gap: 10vh;
   }
 }
 
