ContrastImage now scales properly

--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -11,10 +11,10 @@ $tablet: 1024px !default;
 $desktop-small: 1440px !default;
 $desktop: 1920px !default;
 
-$mobile-and-up: 'only screen and (min-width: #{$mobile-small-up})' !default;
+$mobile-small-and-up: 'only screen and (min-width: #{$mobile-small-up})' !default;
+$mobile-and-up: 'only screen and (min-width: #{$mobile-up})' !default;
 $tablet-and-up: 'only screen and (min-width: #{$tablet-up})' !default;
 $desktop-small-and-up: 'only screen and (min-width: #{$desktop-small-up})' !default;
 $desktop-and-up: 'only screen and (min-width: #{$desktop-up})' !default;
 
-$settings-height: 12vh;
-$background-select-height: 23vh;
+$breakpoints: $mobile-small-and-up, $mobile-and-up, $tablet-and-up, $desktop-small-and-up, $desktop-and-up;
