--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -2,6 +2,7 @@
 @use '_vars';
 @use '_reset';
 @use '_font-styles';
+@use 'sass:map';
 
 // Font sizes
 $title-size: 3rem;
@@ -9,18 +10,33 @@ $body-size: 1rem;
 $header-sizes: 2.4rem, 1.8rem, 1.4rem;
 
 @font-face {
-  font-family: title;
+  font-family: 'title';
   src: url(./fonts/Philosopher-Bold.ttf);
 }
 
 @font-face {
-  font-family: heading;
-  src: url(./fonts/Montserrat-SemiBold.ttf);
+  font-family: 'heading';
+  src: url(./fonts/Philosopher-Regular.ttf);
 }
 
 @font-face {
-  font-family: body;
-  src: url(./fonts/Montserrat-Regular.ttf);
+    font-family: 'body';
+    src: url(./fonts/LibreBaskerville-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'body-bold';
+    src: url(./fonts/LibreBaskerville-Bold.ttf);
+}
+
+@font-face {
+    font-family: 'body-italic';
+    src: url(./fonts/LibreBaskerville-Italic.ttf);
+}
+
+@font-face {
+    font-family: 'caption';
+    src: url(./fonts/QwitcherGrypen-Bold.ttf);
 }
 
 html {
