--- a/src/components/styles/fragment-card.scss
+++ b/src/components/styles/fragment-card.scss
@@ -1,4 +1,5 @@
 @use '../../assets/font-styles';
+@use '../../assets/global';
 
 .fragment-card {
   top: 0;
@@ -45,7 +46,7 @@
       @include font-styles.font-attributes(0.9rem);
       @include font-styles.contrast-font(white);
       margin-top: 12px;
-      font-family: 'body'
+      font-family: 'title';
     }
     h2 {
       border-top: 3px solid white;
@@ -54,7 +55,7 @@
       border-radius: 3px;
       white-space: nowrap;
       transition: justify-content 0.5s;
-      font-family: 'title';
+      font-family: 'heading-main';
     }
   }
 }
