--- a/src/components/styles/fable-card.scss
+++ b/src/components/styles/fable-card.scss
@@ -1,7 +1,7 @@
 @use '../../assets/font-styles';
 @use '../../assets/global';
 
-.fragment-card {
+.fable-card {
   top: 0;
   position: relative;
   border-radius: 10px;
