--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -35,7 +35,7 @@ $header-sizes: 2.4rem, 1.8rem, 1.4rem;
 }
 
 @font-face {
-    font-family: 'caption';
+    font-family: 'blurb';
     src: url(./fonts/QwitcherGrypen-Bold.ttf);
 }
 
